#4 try to fix scoll issue on mobile devices

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -33,41 +33,38 @@ body {
 }
 
 /* fix for error and success glyphicons on dropdowns 
-   see https://github.com/twbs/bootstrap/issues/14202 */ 
+   see https://github.com/twbs/bootstrap/issues/14202 */
 select ~ .form-control-feedback {
- margin-right: 15px;
+	margin-right: 15px;
 }
 
 /* fix for error and success glyphicons on dropdowns 
    see https://github.com/twbs/bootstrap/issues/14202 */
 select[multiple] ~ .form-control-feedback {
-  margin-right: 0;
+	margin-right: 0;
 }
 
 /* make text bold*/
-.labelTextBold{
-	 font-weight: bold;
+.labelTextBold {
+	font-weight: bold;
 }
-
 
 /* add hover effect to panels */
-.custom-panel-heading{
-	  cursor:pointer !important;	  
+.custom-panel-heading {
+	cursor: pointer !important;
 }
+
 .custom-panel-heading:hover {
-  background-color: #0D67B5!important;
+	background-color: #0D67B5 !important;
 }
 /* add white space between icon and text */
-.textForIcon{
+.textForIcon {
 	margin-left: 3px;
 }
-/*.custom-table{
-	 height: 400px !important;
-	 overflow: auto;
-	   -webkit-overflow-scrolling: touch;
-}*/
- @media (max-width: 992px) { 
-   .custom-table{
-	 overflow-x: scroll;
+/* show scrollbar on mobile divices*/
+@media ( max-width : 767px) {
+	.custom-table {
+		overflow-x: scroll;
+		-webkit-overflow-scrolling-x: scroll;
+	}
 }
- }
